--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.python linguist-detectable=true
 *.js linguist-detectable=true
-*.html linguist-detectable=false
+*.css linguist-detectable=false
 *.xml linguist-detectable=false
